corrected operations updateAvatar and changePassword
